# gto-poker-solver

./: .gitignore  LICENSE  Makefile  README.md  cfr.py  generate_results.py  kuhn.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  solve.py
.github/workflows/: ci.yml
bench/: cfr_bench.jl
gto_poker_solver/: __init__.py  cfr_solver.py  visualisation.py
src/: poker_env.py
tests/: conftest.py  test_cfr.py  test_env.py  test_kuhn.py  test_solver.py
