[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gto-poker-solver"
version = "2.1.0"
description = "CFR-based Nash equilibrium solver for No-Limit Hold'em river endgames"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "GTO Research Lab"}]
keywords = ["poker", "cfr", "game-theory", "nash-equilibrium", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
]

[project.scripts]
gto-solve = "gto_poker_solver.main:main"

[project.urls]
Repository = "https://github.com/your-org/gto-poker-solver"
Documentation = "https://github.com/your-org/gto-poker-solver#readme"

[tool.setuptools.packages.find]
include = ["gto_poker_solver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
